print: Avoid page breaks in inconvenient places

--- a/templates/css/_style.css
+++ b/templates/css/_style.css
@@ -170,5 +170,9 @@ figure, :not(figure) > picture, :not(figure, picture) > img {display:block;margi
     main header{background: none;padding-bottom: var(--spacing-xl);margin:var(--spacing-xl) 0 0;border-bottom: 1px solid #000;text-align: left}
     main header h1{font-size: 80%;}
     main nav{display: none!important}
+
+    h1, h2, h3, h4, h5, h6, img {page-break-after:avoid;page-break-inside:avoid;}
+    table, pre {page-break-inside:avoid}
+    ul, ol, dl {page-break-before:avoid}
 }
 {% endcss %}
